Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-1652

[Windows] C Example tests fail

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-c-0.18.0
    • proton-c-0.18.1
    • examples, proton-c
    • None
    • Windows appveyor CI build

    Description

      Having re enabled the C example tests, they prompty fail!

      23: ======================================================================
      23: ERROR: test_send_abort_broker (__main__.CExampleTest)
      23: Sending aborted messages to a broker
      23: ----------------------------------------------------------------------
      23: Traceback (most recent call last):
      23:   File "C:/projects/qpid-proton/examples/c/example_test.py", line 97, in test_send_abort_broker
      23:     b.proc.wait_re("Message aborted\n"*MESSAGES)
      23:   File "C:\projects\qpid-proton\tools\py\proctest.py", line 144, in wait_re
      23:     raise ProcError(self, "gave up waiting for '%s' after %ss" % (regexp, timeout))
      23: ProcError: gave up waiting for 'Message aborted
      23: Message aborted
      23: Message aborted
      23: Message aborted
      23: Message aborted
      23: Message aborted
      23: Message aborted
      23: Message aborted
      23: Message aborted
      23: Message aborted
      23: ' after 10s (exit=None) command:
      23: broker  1467
      23: vvvvvvvvvvvvvvvv
      23: Failed to open the file holding the private key: ssl_certs/tserver-full.p12 : The system cannot find the path specified. 
      23: listening
      23: ^^^^^^^^^^^^^^^^
      23: 
      23: ======================================================================
      23: ERROR: test_send_abort_direct (__main__.CExampleTest)
      23: Send aborted messages to the direct server
      23: ----------------------------------------------------------------------
      23: Traceback (most recent call last):
      23:   File "C:/projects/qpid-proton/examples/c/example_test.py", line 113, in test_send_abort_direct
      23:     d.wait_re(expect)
      23:   File "C:\projects\qpid-proton\tools\py\proctest.py", line 144, in wait_re
      23:     raise ProcError(self, "gave up waiting for '%s' after %ss" % (regexp, timeout))
      23: ProcError: gave up waiting for 'listening
      23: {"sequence"=1}
      23: {"sequence"=2}
      23: {"sequence"=3}
      23: {"sequence"=4}
      23: {"sequence"=5}
      23: {"sequence"=6}
      23: {"sequence"=7}
      23: {"sequence"=8}
      23: {"sequence"=9}
      23: {"sequence"=10}
      23: Message aborted
      23: Message aborted
      23: Message aborted
      23: Message aborted
      23: Message aborted
      23: Message aborted
      23: Message aborted
      23: Message aborted
      23: Message aborted
      23: Message aborted
      23: ' after 10s (exit=None) command:
      23: direct  1470 examples 20
      23: vvvvvvvvvvvvvvvv
      23: listening
      23: {"sequence"=1}
      23: {"sequence"=2}
      23: {"sequence"=3}
      23: {"sequence"=4}
      23: {"sequence"=5}
      23: {"sequence"=6}
      23: {"sequence"=7}
      23: {"sequence"=8}
      23: {"sequence"=9}
      23: {"sequence"=10}
      23: ^^^^^^^^^^^^^^^^
      23: 
      23: ======================================================================
      23: FAIL: test_send_ssl_receive (__main__.CExampleTest)
      23: Send first then receive
      23: ----------------------------------------------------------------------
      23: Traceback (most recent call last):
      23:   File "C:/projects/qpid-proton/examples/c/example_test.py", line 122, in test_send_ssl_receive
      23:     self.assertEqual(send_expect(), self.runex("send-ssl", b.port))
      23: AssertionError: '10 messages sent and acknowledged\n' != ''
      23: 
      23: ----------------------------------------------------------------------
      23: Ran 7 tests in 20.372s
      23: 
      23: FAILED (failures=1, errors=2)
      

      There is more than one failure here and a glimpse that something may wrong with the SSL set up.

      Attachments

        Activity

          People

            astitcher Andrew Stitcher
            astitcher Andrew Stitcher
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: