PROTON-1652: Fix tests to run on Windows - run test in correct directory - some extra broker output flushing - treat empty ssl cert_name like no cert_name