examples/c/direct.c
@@ -150,6 +150,7 @@ static void handle_receive(app_data_t *app, pn_event_t* event) {
        recv = pn_link_recv(l, m->start, m->size);
        if (recv == PN_ABORTED) {
          fprintf(stderr, "Message aborted\n");
+         fflush(stderr);
          m->size = 0;           /* Forget the data we accumulated */
          pn_delivery_settle(d); /* Free the delivery so we can receive the next message */
          pn_link_flow(l, 1);    /* Replace credit for aborted message */
